Поправил TaroCatalogueProcessor, изменил смайлик в миграции, убрал TODO, добавил parse_mode в messageWithPhoto, добавил команды